# img_catalog_tui

./: .gitignore  README.md  logger.py  main.py  pyproject.toml
.cursor/rules/: python-typing.mdc
config/: config.toml  menu.toml
config/templates/: imageset_report.html  index.html  index_carts.html  index_review.html  interview_basic.tmpl  interview_default.tmpl
docs/: 19-add-search-guide.md  19-add-search-plan.md  19-add-search.md  19-add-sqlite-db.md  PRD.md  example_backblaze_api.txt  example_photopea_integration.txt  example_photoshop_api.txt  issue10_move_to_folder.md  logger.py  notes.md  notes_Copy_Folder_error.md  notes_Folder_Index.md  notes_photoshop_mockups.md  notes_status_flow.md  todos.md
docs/issue14/: issue14_notes.md
docs/issue2/: issue2.md
img_catalog_tui/: __init__.py  cli.py  config.py  logger.py  main.py
img_catalog_tui/core/: __init__.py  commands.py  folder.py  folder_index.py  folder_review.py  folders.py  imagefile.py  imagefile_mockups.py  imageset.py  imageset_batch_update.py  imageset_commands.py  imageset_interview.py  imageset_interview2.py  imageset_interview3.py  imageset_metadata.py  imageset_toml.py  metadata.py  openrouter.py  report_imageset.py  search.py
img_catalog_tui/db/: __init__.py  folders.py  folders.toml  imageset_sections.py  imagesetfile_tags.py  imagesetfiles.py  imagesets.py  interviews.py  sync.py  utils.py
img_catalog_tui/flask/: flask.py  urls.py  views.py  views_api.py  views_html.py
img_catalog_tui/flask/templates/: base.html  batch_update.html  folder.html  folders.html  imagefile.html  imageset.html  imageset_edit.html  imageset_move.html  index.html  interview.html  mockups.html  reviews.html  reviews_list.html  reviews_old.html  search.html  (+1 more)
img_catalog_tui/ui/: __init__.py  help.py  menu.old  menu.py  tui.old  tui.py
img_catalog_tui/utils/: __init__.py  exif.py  file_utils.py  folder_utils.py
scripts/: migrate_posted_to.py
tests/: test_search_service.py
(+1 files in other folders)
